# InvoFi

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: whitepaper-pdf.yml
.specstory/history/: 2025-05-03_16-56-next-js-project-creation-error-troubleshooting.md  2025-05-03_18-13-vercel-deployment-error-troubleshooting.md  2025-05-03_18-35-resolving-react-dependency-conflict-error.md  2025-05-05_18-02-setting-up-node-js-backend-for-next-js.md  2025-05-05_19-13-adjusting-content-positioning.md  2025-05-11_14-22-integrating-node-backend-with-vercel-frontend.md  2025-05-11_14-40-migration-of-node-js-backend-to-vercel-frontend.md  2025-05-11_15-12-removing-dashboard-button-from-ui.md  2025-05-11_15-17-using-new-logo-for-website.md  2025-05-11_15-19-website-logo-update-discussion.md  2025-05-11_15-31-removing-invoices-section-from-main-page.md  2025-05-11_15-37-creating-a-footer-design.md  2025-05-11_16-01-dashboard-visibility-and-navbar-adjustments.md  2025-05-13_13-46-mock-interface-for-invoice-marketplace.md  2025-05-13_15-06-integrating-logo-into-readme.md  2025-05-13_15-31-mock-invoice-verification-and-risk-assessment-flow.md  2025-05-13_15-54-admin-page-for-invoice-verification.md  2025-05-13_16-07-admin-page-invoice-tokenization-workflow.md
Anchor/invo-fi/: .gitignore  .prettierignore  (+7 more)
Anchor/invo-fi/programs/invo-fi/: Cargo.toml  README.md
Anchor/invo-fi/programs/invo-fi/src/: constants.rs  error.rs  lib.rs
Anchor/invo-fi/programs/invo-fi/src/instructions/: claim_funding.rs  contribute.rs  deposit.rs  initialize.rs  list_invoice.rs  mint_invoice_nft.rs  mod.rs  repay_and_distribute.rs  swap.rs  withdraw.rs
Anchor/invo-fi/programs/invo-fi/src/state/: config.rs  invoice.rs  mod.rs
Anchor/invo-fi/programs/invo-fi/tests/: contribute.rs  list_invoice.rs  litesvm_invo_fi_flow.rs
Anchor/invo-fi/programs/invo-fi/tests/support/: mod.rs
docs/: Technical.md  how_the_amm_works.md  invoice_verification.md  tech_implementation.md  why_this_makes_sense_for_banks.md
invofi/: .env_docker.local  .gitignore  package-lock.json  package.json  pnpm-lock.yaml
server/: .gitignore  package-lock.json  package.json
(+65 files in other folders)
