[package]
name = "invo-fi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "invo_fi"

[features]          
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["idl-build"] }
bytemuck = { version = "1.12.3", features = ["derive"] }
mpl-core = { version = "=0.11.1-beta.2", features = ["anchor"] }


[toolchain]
anchor_version = "0.31.1"